Margins Added to Mobile Header to Prevent Stories from Overlapping On Top

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -34,10 +34,12 @@
 		margin-top: 2rem;
 		height: auto;
 		justify-content: flex-start;	
+		margin-bottom: 5rem;
 	@include tablet {
 		flex-direction: row;
 		align-items: flex-start;
 		justify-content: center;
+		margin-bottom: 2rem;
 		.logo img {
 			height: 10vh;
 		}
